# career-lens-ai

./: .env.example  .gitignore  README.md  models.py  pyproject.toml  requirements.txt  test_llm.py  test_score.py
data/: job_description.json
jobs/: amazon.txt
src/: comparator.py  extract_text.py  llm_extractor.py  main.py  model.py  report.py  scorer.py  skills_dict.py
