[project]
name = "career-lens-ai"
version = "0.1.0"
description = "An AI-powered Resume Matcher that extracts and scores candidate resumes against HR requirements using Groq LLM."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=1.5.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]
